--- a/styles/style.css
+++ b/styles/style.css
@@ -4,3 +4,25 @@ html, body {
     margin: 0;
     padding: 0;
 }
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+
+
+.btn-dir-menu-file {
+    height: 35px;
+    width: 100%;
+    border: 0;
+    text-align: left;
+}
+
+.btn-dir-menu-folder {
+    height: 35px;
+    width: 100%;
+    border: 0;
+    text-align: left;
+}
