--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,9 @@ ul {
     width: 100%;
     border: 0;
     text-align: left !important;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .btn-dir-menu-folder {
@@ -31,6 +34,9 @@ ul {
     width: 100%;
     border: 0;
     text-align: left !important;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .folder-svg {
@@ -84,4 +90,44 @@ ul {
 .folder-menu-item:hover {
     background: gray;
     color: white;
+}
+
+#input-gen-salt {
+    width: 100%;
+}
+
+#startup-signup {
+    display: none;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#app-container {
+    display: none;
+}
+
+#form-signup {
+    max-width: 500px;
+    margin: auto;
+}
+
+#container {
+    height: calc(100% - 50px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#editor-container {
+    height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+#editor {
+    height: 100%;
+    flex: 1;
+    overflow-y: auto;
+    width: 100%;
 }
