--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,10 @@
 html, body {
     width: 100%;
-    height: 95%;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
 
 .div-menu-folder {
     width: 100%;
@@ -84,6 +79,7 @@ ul {
 }
 
 #list-folder-menu-list {
+    padding: 0;
     margin: 0;
 }
 
@@ -111,7 +107,7 @@ ul {
 }
 
 #container {
-    height: calc(100% - 50px);
+    height: calc(100vh - 50px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -133,4 +129,23 @@ ul {
 
 #btn-submit-cred-form {
     margin-bottom: 15px;
+}
+
+#btn-main-add {
+    display: inline !important;
+    border: none;
+    background: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#input-file-name {
+    height: 100%;
+    width: 70%;
+    border: none;
+    line-height: 50px;
+    font-weight: 500;
+    font-size: 1.5rem;
+    text-align: center;
 }
