--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,9 @@ html, body {
     padding: 0;
 }
 
+.hidden {
+    display: none;
+}
 
 .div-menu-folder {
     width: 100%;
@@ -45,6 +48,18 @@ html, body {
 
 .change-svg {
 
+}
+
+#btn-settings {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    border: 0;
+    background: none;
+}
+
+#btn-settings:focus {
+    outline: 0;
 }
 
 .btn-hidden-folder-menu {
