--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,8 @@ html, body {
     padding: 0;
 }
 
-.hidden {
-    display: none !important;
+#cloud-sign-in-spinner {
+    vertical-align: middle;
 }
 
 .div-menu-folder {
